[project]
name = "aimy-sikll"
version = "2.1.0"
description = "轻量级渗透测试辅助工具链 (AI Agent Ready)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "yangdada863" },
]
keywords = ["security", "pentest", "ai-agent", "claude", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "PyJWT>=2.6.0",
    "cryptography>=39.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.10.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/aimy-sikll"
Repository = "https://github.com/anomalyco/aimy-sikll"
BugTracker = "https://github.com/anomalyco/aimy-sikll/issues"

[project.scripts]
aimy = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=tools/ --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "online: marks tests that require network access",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "N812"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["tools"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.setuptools.packages.find]
include = ["tools*", "tools.*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
